# metaldemo

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  libmetal.h  libmetal.m  libmetal.metal  main.cpp  metaldemo
